# paii-ml

./: .gitignore  pyproject.toml  readme.md  requirements-llm.txt  requirements.txt
archive/: QUICKSTART.sh  paii2.py  text_data.txt
examples/: demo_deepseek.py  demo_local_llm.py  demo_openai.py  quickstart.py
paii/: __init__.py  app.py  cli.py  config.py  db.py  embeddings.py  llm.py  pdf.py  utils.py
tests/: test_cosine_behavior.py  test_db.py  test_duplicates_faiss.py  test_faiss_store.py  test_pdf_processor.py  test_utils.py
